// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorProblemView component renders raw editor 1`] = `
<injectIntl(ShimmedIntlComponent)
  getContent={[Function]}
>
  <div
    className="editProblemView d-flex flex-row flex-nowrap justify-content-end"
  >
    <Container
      className="advancedEditorTopMargin p-0"
      fluid={true}
    >
      <RawEditor
        content={null}
        editorRef={
          Object {
            "current": null,
          }
        }
        lang="xml"
      />
    </Container>
    <span
      className="editProblemView-settingsColumn"
    >
      <injectIntl(ShimmedIntlComponent)
        problemType="advanced"
      />
    </span>
  </div>
</injectIntl(ShimmedIntlComponent)>
`;

exports[`EditorProblemView component renders simple view 1`] = `
<injectIntl(ShimmedIntlComponent)
  getContent={[Function]}
>
  <div
    className="editProblemView d-flex flex-row flex-nowrap justify-content-end"
  >
    <span
      className="flex-grow-1"
    >
      <injectIntl(ShimmedIntlComponent)
        assets={Object {}}
      />
      <injectIntl(ShimmedIntlComponent)
        problemType="multiplechoiceresponse"
      />
    </span>
    <span
      className="editProblemView-settingsColumn"
    >
      <injectIntl(ShimmedIntlComponent)
        problemType="multiplechoiceresponse"
      />
    </span>
  </div>
</injectIntl(ShimmedIntlComponent)>
`;
